--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title style="font-style: italic;">Pawan's Portfolio</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css" type="text/css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -245,7 +246,7 @@
                             <div class="card mb-4 mx-3 bg-warning text-light h-100">
                                 <img src="./card1.jpg" alt="Pi" class="card-img-top img-fluid" height="20vh">
                                 <h1 class="card-title mt-4" style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 2vw;">News Portal</h1>
-                                <a href="https://brigadierpratap.github.io/MyNews/" class="card-link stretched-link"></a>
+                                <a href="https://pawannitp.me/" class="card-link stretched-link"></a>
                                 <p class="card-body text-center mb-5">
                                     It is a news portal created by me. It has various sections such as sports , politics , entertainment and current topics.
                                 </p>
