--- a/index.html
+++ b/index.html
@@ -324,6 +324,48 @@
               </div>
             </div>
           </div>
+          <div class="work__box" style="margin-top: 10em">
+            <div class="work__text">
+              <h3>Lister</h3>
+              <p>
+                A Single Page To-do-list app built using React.js and firebase
+                that allows users to manage tasks and maintain profile.
+              </p>
+              <ul class="work__list">
+                <li>ReactJS</li>
+                <li>Redux</li>
+                <li>Firebase</li>
+              </ul>
+
+              <div class="work__links">
+                <a
+                  href="https://lister-2-88bad.web.app/"
+                  target="_blank"
+                  class="link__text"
+                >
+                  Visit Site <span>&rarr;</span>
+                </a>
+                <a
+                  href="https://github.com/brigadierpratap/Lister"
+                  target="_blank"
+                >
+                  <img
+                    src="./images/github.svg"
+                    class="work__code"
+                    title="View Source Code"
+                    alt="GitHub"
+                  />
+                </a>
+              </div>
+            </div>
+            <div class="work__image-box">
+              <img
+                src="./images/Project-4.png"
+                class="work__image"
+                alt="Project 1"
+              />
+            </div>
+          </div>
         </div>
       </section>
 
